implemented auto user creation flow, user will be created as soon as firestore adds new doc:remaining to solve edge cases

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -221,7 +221,7 @@
   "EditListingLocationPanel.createListingTitle": "Location",
   "EditListingLocationPanel.title": "Edit the location of {listingTitle}",
   "EditListingPage.loadingListingData": "Loading listing data…",
-  "EditListingPage.titleCreateListing": "List your bike",
+  "EditListingPage.titleCreateListing": "List your Services",
   "EditListingPage.titleEditListing": "Edit listing",
   "EditListingPhotosForm.addImagesTip": "Tip: Upload the best 2-3 photos from different angles and with a good quality.",
   "EditListingPhotosForm.chooseImage": "+ Add a photo…",
