listing page:completed structure and added relevant sections with valid data

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -87,7 +87,6 @@
   "ConfirmSignupForm.lastNamePlaceholder": "Doe",
   "ConfirmSignupForm.lastNameRequired": "You need to add a last name.",
   "ConfirmSignupForm.signUp": "Continue with {idp}",
-  "SignupForm.confirmEmailLabel":"Confirm Your Email",
   "ContactDetailsForm.confirmChangesInfo": "To change your email address, please enter your current password.",
   "ContactDetailsForm.confirmChangesTitle": "Confirm your changes",
   "ContactDetailsForm.emailInvalid": "A valid email address is required.",
@@ -404,6 +403,11 @@
   "ListingPage.reviewsTitle": "Reviews ({count})",
   "ListingPage.schemaTitle": "{title} | {marketplaceName}",
   "ListingPage.viewImagesButton": "View photos ({count})",
+  "CustomListingPage.Listing.heading":"Tarot Advisors",
+  "CustomListingPage.Listing.authorExperience":"Years of Experience",
+  "CustomListingPage.Listing.authorSpeciality":"Speciality or Reading Type",
+  "CustomListingPage.Listing.authorServicesTitle":"Advisor Services",
+  "CustomListingPage.Listing.authorMeetMeTitle":"Meet Me",
   "LoadableComponentErrorBoundaryPage.description": "It looks like the app needs to be updated! Please refresh the page or go back to {link}.",
   "LoadableComponentErrorBoundaryPage.heading": "Oops, we couldn't fetch the page.",
   "LoadableComponentErrorBoundaryPage.landingPageLink": "landing page",
@@ -902,25 +906,25 @@
   "Topbar.mobileSearchHelp": "Find your perfect bike.",
   "Topbar.searchIcon": "Open search",
   "TopbarDesktop.accountSettingsLink": "Account settings",
-  "TopbarDesktop.createListing": "List your bike",
+  "TopbarDesktop.createListing": "List your services",
   "TopbarDesktop.inbox": "Inbox",
   "TopbarDesktop.login": "Log in",
   "TopbarDesktop.logo": "{marketplaceName}",
   "TopbarDesktop.logout": "Log out",
   "TopbarDesktop.profileSettingsLink": "Profile settings",
   "TopbarDesktop.signup": "Sign up",
-  "TopbarDesktop.yourListingsLink": "Your bikes",
+  "TopbarDesktop.yourListingsLink": "Your listings",
   "TopbarMobileMenu.accountSettingsLink": "Account settings",
   "TopbarMobileMenu.greeting": "Hello {displayName}",
   "TopbarMobileMenu.inboxLink": "Inbox",
   "TopbarMobileMenu.loginLink": "Log in",
   "TopbarMobileMenu.logoutLink": "Log out",
-  "TopbarMobileMenu.newListingLink": "List your bike",
+  "TopbarMobileMenu.newListingLink": "List your services",
   "TopbarMobileMenu.profileSettingsLink": "Profile settings",
   "TopbarMobileMenu.signupLink": "Sign up",
   "TopbarMobileMenu.signupOrLogin": "{signup} or {login}",
   "TopbarMobileMenu.unauthorizedGreeting": "Hello there,{lineBreak}would you like to {signupOrLogin}?",
-  "TopbarMobileMenu.yourListingsLink": "Your bikes",
+  "TopbarMobileMenu.yourListingsLink": "Your listings",
   "TopbarSearchForm.placeholder": "Search by specialty or reading type",
   "TransactionPage.ActivityFeed.default-booking.accepted": "{actor, select, you {You accepted the booking request.} operator {The booking request was accepted.} other {{otherUsersName} accepted the booking request.}}",
   "TransactionPage.ActivityFeed.default-booking.canceled": "The booking was canceled.",
@@ -1040,7 +1044,7 @@
   "TransactionPanel.sendMessagePlaceholder": "Send a message to {name}…",
   "TransactionPanel.sendingMessageNotAllowed": "This user has been removed. Sending messages to the user is no longer possible.",
   "TransactionPanel.shippingInfoHeading": "Shipping address",
-  "UserCard.contactUser": "Contact",
+  "UserCard.contactUser": "Send Message",
   "UserCard.heading": "Hello, I'm {name}.",
   "UserCard.showFullBioLink": "more",
   "UserCard.viewProfileLink": "View profile",
@@ -1048,5 +1052,5 @@
   "UserDisplayName.deleted": "Deleted user",
   "UserNav.accountSettings": "Account settings",
   "UserNav.profileSettings": "Profile settings",
-  "UserNav.yourListings": "Your bikes"
+  "UserNav.yourListings": "Your Listings"
 }
