completed order form modal also added functionality to add images on cloudinary, remaining to add deleting functionality

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -403,11 +403,25 @@
   "ListingPage.reviewsTitle": "Reviews ({count})",
   "ListingPage.schemaTitle": "{title} | {marketplaceName}",
   "ListingPage.viewImagesButton": "View photos ({count})",
-  "CustomListingPage.Listing.heading":"Tarot Advisors",
-  "CustomListingPage.Listing.authorExperience":"Years of Experience",
-  "CustomListingPage.Listing.authorSpeciality":"Speciality or Reading Type",
-  "CustomListingPage.Listing.authorServicesTitle":"Advisor Services",
-  "CustomListingPage.Listing.authorMeetMeTitle":"Meet Me",
+  "CustomListingPage.Listing.heading": "Tarot Advisors",
+  "CustomListingPage.Listing.authorExperience": "Years of Experience",
+  "CustomListingPage.Listing.authorSpeciality": "Speciality or Reading Type",
+  "CustomListingPage.Listing.authorServicesTitle": "Advisor Services",
+  "CustomListingPage.Listing.authorMeetMeTitle": "Meet Me",
+  "CustomListingPage.Lisitng.orderFormTitle": "Order Services {advisor}",
+  "CustomListingPage.Listing.orderFormButton":"Choose Your Reading",
+  "CustomListingPage.Listing.orderFormSelectServicesLabel": "Service",
+  "CustomListingPage.Listing.orderFormDateFieldLabel": "Date",
+  "CustomListingPage.Listing.orderFormDateFieldPlaceholder": "Choose a date..",
+  "CustomListingPage.Listing.orderFormMessageFieldLabel": "Message",
+  "CustomListingPage.Listing.orderFormMessageFieldHelperText": "SUBMIT YOUR QUESTION or FOR LIVE CALLS: PROVIDE 3 TIMES THAT WORK FOR YOU INCLUDING TIME ZONE. ADVISOR WILL CONFIRM ONE.",
+  "CustomListingPage.Listing.orderFormImageInputFieldLabel":"Add Images",
+  "CustomListingPage.Listing.orderFormImageFieldHelperText":"You can add images for reference (optional)",
+  "CustomListingPage.Listing.serviceRequiredMessage":"Please select a service",
+  "CustomListingPage.Listing.dateRequiredMessage":"Please select a date",
+  "CustomListingPage.Listing.messageInvalidLengthMessage":"Max length is {length}",
+  "CustomListingPage.Listing.messageRequiredMessage":"Please sumit your question",
+  "CustomListingPage.Listing.ChooseReadingButtonText":"Choose your reading",
   "LoadableComponentErrorBoundaryPage.description": "It looks like the app needs to be updated! Please refresh the page or go back to {link}.",
   "LoadableComponentErrorBoundaryPage.heading": "Oops, we couldn't fetch the page.",
   "LoadableComponentErrorBoundaryPage.landingPageLink": "landing page",
@@ -697,12 +711,11 @@
   "ShippingDetails.statePlaceholder": "Enter your state",
   "ShippingDetails.title": "Shipping address",
   "SignupForm.emailInvalid": "A valid email address is required.",
- 
   "SignupForm.emailPlaceholder": "jane.doe@example.com",
   "SignupForm.emailRequired": "You need to add an email.",
-  "SignupForm.confirmEmailLabel":"Confirm Your Email",
-  "SignupFrorm.confirmEmailInvalid":"Emails should match",
-  "SignupForm.phoneNumberInvalid":"Phone number is required",
+  "SignupForm.confirmEmailLabel": "Confirm Your Email",
+  "SignupFrorm.confirmEmailInvalid": "Emails should match",
+  "SignupForm.phoneNumberInvalid": "Phone number is required",
   "SignupForm.firstNameLabel": "First name",
   "SignupForm.firstNamePlaceholder": "jane",
   "SignupForm.firstNameRequired": "You need to add a first name.",
